# data-preprocessors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: changelog.yml  release.yml
data_preprocessors/: list_process.py  text_preprocessor.py  third_party_lib.py
tests/: test_data_preprocessor.py
