[tool.poetry]
name = "data-preprocessors"
version = "0.45.0"
description = "An easy to use tool for Data Preprocessing specially for Text Preprocessing"
license = "MIT"
authors = ["Md. Musfiqur Rahaman <musfiqur.rahaman@northsouth.edu>"]
readme = "README.md"
homepage = "https://github.com/MusfiqDehan/data-preprocessors"
repository = "https://github.com/MusfiqDehan/data-preprocessors"
keywords = ["nlp", "data-preprocessors", "data-preprocessing", "text-preprocessing", "data-science", "textfile", "musfiqdehan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent"]
packages = [{include="data_preprocessors"}]


[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
nltk = "^3.7"
bnlp-toolkit = "^3.1.2"
pandas = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
